Fixed a bunch of warnings, mostly in tests
-in some cases, this was from referencing JCL classes which we aren't technically supposed to
-the common case is addressing unused variables/methods (typically just adding extra checks around them which we should check, anyway)
-removed unused imports
-closed a bunch of leaking class loaders
-also made some of the generics more explicit